youfull/objects/Sales_Org_Activity__c.object
<CustomObject>
    <fields>
        <fullName>PLAN_RNSTMT_CNT__c</fullName>
        <label>PLAN_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_RTURN_AMT__c</fullName>
        <label>PLAN_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_SBMTD_ORD_AMT__c</fullName>
        <label>PLAN_SBMTD_ORD_AMT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_SBMTD_ORD_CNT__c</fullName>
        <label>PLAN_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_STF_CNT__c</fullName>
        <label>PLAN_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_TRAD_NET_SLS_AMT__c</fullName>
        <label>PLAN_TRAD_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_CD__c</fullName>
        <label>SLS_ORG_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_NR__c</fullName>
        <label>SLS_ORG_LVL_NR</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_NM__c</fullName>
        <label>SLS_ORG_NM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_ACTVTY_PCT__c</fullName>
        <label>SPPY_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_APPT_CNT__c</fullName>
        <label>SPPY_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>SPPY_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_AVG_ORD_AMT__c</fullName>
        <label>SPPY_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>SPPY_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_AWRD_SLS_AMT__c</fullName>
        <label>SPPY_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_BAL_DUE_AMT__c</fullName>
        <label>SPPY_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_FAP_AWRD_SLS_AMT__c</fullName>
        <label>SPPY_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_FAP_CNT__c</fullName>
        <label>SPPY_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_HOLD_ORD_CNT__c</fullName>
        <label>SPPY_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>SPPY_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_IN_ZONE_STF_CNT__c</fullName>
        <label>SPPY_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_1_AMT__c</fullName>
        <label>SPPY_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_2_AMT__c</fullName>
        <label>SPPY_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_3_AMT__c</fullName>
        <label>SPPY_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_4_TXT__c</fullName>
        <label>SPPY_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_5_TXT__c</fullName>
        <label>SPPY_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_MRKT_TAG_6_PCT__c</fullName>
        <label>SPPY_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_NET_SLS_AMT__c</fullName>
        <label>SPPY_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_NO_ORD_CNT__c</fullName>
        <label>SPPY_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_ORD_CNT__c</fullName>
        <label>SPPY_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_ORD_INV_AMT__c</fullName>
        <label>SPPY_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_ORD_INV_CNT__c</fullName>
        <label>SPPY_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_ORD_UND_MIN_AMT__c</fullName>
        <label>SPPY_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>SPPY_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_OUT_ZONE_STF_CNT__c</fullName>
        <label>SPPY_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PAST_DUE_AMT__c</fullName>
        <label>SPPY_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PD_LDRSHP_ERNGS_AMT__c</fullName>
        <label>SPPY_PD_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PD_SLS_AMT__c</fullName>
        <label>SPPY_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PENDNG_ORD_CNT__c</fullName>
        <label>SPPY_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_REP_NO_ACTVTY_CNT__c</fullName>
        <label>SPPY_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RMVL_CNT__c</fullName>
        <label>SPPY_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RNSTMT_CNT__c</fullName>
        <label>SPPY_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURN_AMT__c</fullName>
        <label>SPPY_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_SBMTD_ORD_AMT__c</fullName>
        <label>SPPY_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SPPY_SBMTD_ORD_CNT__c</fullName>
        <label>SPPY_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_STF_CNT__c</fullName>
        <label>SPPY_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TRAD_ORD_UND_MIN_AMT__c</fullName>
        <label>SPPY_TRAD_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>(  LDRSHP_FAP_AWRD_SLS_AMT__c  +  TRAD_FAP_AWRD_SLS_AMT__c  )  /  ( LDRSHP_ORD_CNT__c + TRAD_ORD_CNT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_FAP_PER_REP__c</fullName>
        <formula>(  LDRSHP_FAP_CNT__c  +  TRAD_FAP_CNT__c  )  /  (  LDRSHP_ORD_CNT__c  +  TRAD_ORD_CNT__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_MRKT_TAG_1_AMT__c</fullName>
        <label>TOTAL_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_MRKT_TAG_2_AMT__c</fullName>
        <label>TOTAL_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_MRKT_TAG_6_AMT__c</fullName>
        <label>TOTAL_MRKT_TAG_6_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_ACTVTY_PCT__c</fullName>
        <label>TRAD_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_APPT_CNT__c</fullName>
        <label>TRAD_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>TRAD_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>TRAD_FAP_AWRD_SLS_AMT__c  /  TRAD_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRAD_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_AVG_ORD_AMT__c</fullName>
        <label>TRAD_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>TRAD_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_AWRD_SLS_AMT__c</fullName>
        <label>TRAD_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_BAL_DUE_AMT__c</fullName>
        <label>TRAD_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_FAP_AWRD_SLS_AMT__c</fullName>
        <label>TRAD_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_FAP_CNT__c</fullName>
        <label>TRAD_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_FAP_PER_REP__c</fullName>
        <formula>TRAD_FAP_CNT__c  /  TRAD_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRAD_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_HOLD_ORD_CNT__c</fullName>
        <label>TRAD_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>TRAD_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_IN_ZONE_STF_CNT__c</fullName>
        <label>TRAD_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_1_AMT__c</fullName>
        <label>TRAD_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_2_AMT__c</fullName>
        <label>TRAD_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_3_AMT__c</fullName>
        <label>TRAD_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_4_TXT__c</fullName>
        <label>TRAD_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_5_TXT__c</fullName>
        <label>TRAD_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRAD_MRKT_TAG_6_PCT__c</fullName>
        <label>TRAD_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_NET_SLS_AMT__c</fullName>
        <label>TRAD_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_NO_ORD_CNT__c</fullName>
        <label>TRAD_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_ORD_CNT__c</fullName>
        <label>TRAD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_ORD_INV_AMT__c</fullName>
        <label>TRAD_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRAD_ORD_INV_CNT__c</fullName>
        <label>TRAD_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>TRAD_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_OUT_ZONE_STF_CNT__c</fullName>
        <label>TRAD_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_PAST_DUE_AMT__c</fullName>
        <label>TRAD_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_PD_SLS_AMT__c</fullName>
        <label>TRAD_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_PENDNG_ORD_CNT__c</fullName>
        <label>TRAD_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_REP_NO_ACTVTY_CNT__c</fullName>
        <label>TRAD_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_RMVL_CNT__c</fullName>
        <label>TRAD_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_RNSTMT_CNT__c</fullName>
        <label>TRAD_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_RTURN_CNT__c</fullName>
        <label>TRAD_RTURN_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_SBMTD_ORD_AMT__c</fullName>
        <label>TRAD_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRAD_SBMTD_ORD_CNT__c</fullName>
        <label>TRAD_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRAD_STF_CNT__c</fullName>
        <label>TRAD_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Activity (DO NOT USE)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_Activity</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_ZONE_CD_KEY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>23</value>
        </filters>
        <filters>
            <field>SLS_ORG_CD__c</field>
            <operation>equals</operation>
            <value>0000229</value>
        </filters>
        <label>RU_Activity</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Org Activity Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>